tests/ui/has_many_parent_mismatch.stderr
error[E0308]: mismatched types
 --> tests/ui/has_many_parent_mismatch.rs:9:1
  |
9 | #[seekwel::model]
  | ^^^^^^^^^^^^^^^^^ expected `HasManyHandlers<Pet, Shelter>`, found `HasManyHandlers<Pet, Person>`
  |
  = note: expected struct `HasManyHandlers<Pet, Shelter>`
             found struct `HasManyHandlers<Pet, Person>`
  = note: this error originates in the derive macro `seekwel::Model` (in Nightly builds, run with -Z macro-backtrace for more info)
